# Kintsugi

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  COMPLIANCE.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-architecture.md  02-site-packs.md  03-data-model.md  04-self-healing.md  05-api.md  06-observability.md  07-test-targets.md  08-roadmap.md  09-decisions.md
fixtures/: index.json
fixtures/_synthetic/jsonld/: array.html  graph.html  malformed.html  product.html  two_products.html
fixtures/books.toscrape.com/: coverage.yaml
fixtures/books.toscrape.com/book/: baseline.json
fixtures/books.toscrape.com/book/corpus/: manifest.json
fixtures/books.toscrape.com/book/golden/baseline-01/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-02/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-03/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-04/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-05/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-06/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-07/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-08/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-09/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-10/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-11/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-12/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-13/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-14/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-15/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-16/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-17/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-18/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-19/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-20/: expected.json  meta.json
fixtures/books.toscrape.com/book/golden/baseline-21/: expected.json  meta.json
fixtures/quotes.toscrape.com/quote/: baseline.json
kintsugi/: __init__.py  __main__.py  canonical.py  cli.py  clock.py  config.py  heal_protocol.py  logging.py  runner.py
kintsugi/classify/: __init__.py  enums.py  outcome.py  precheck.py
kintsugi/discovery/: __init__.py  base.py  pagination.py  seed_list.py  stubs.py
kintsugi/extract/: __init__.py  base.py  chain.py  css.py  derive.py  embedded_json.py  entity.py  jsonld.py  jsonpath_fields.py  xhr.py
kintsugi/fetch/: __init__.py  base.py  block_detect.py  http.py  ratelimit.py  robots.py  signatures.yaml
kintsugi/harness/: __init__.py  expected_model.py  fixture_model.py  fixtures_cli.py  replay.py  sources.py
kintsugi/packs/: __init__.py  denylist.py  jsonschema.py  loader.py  model.py  validate.py
kintsugi/quality/: __init__.py  counters.py  history.py  metrics.py  pandera_gen.py  profile.py  run_metrics.py
kintsugi/storage/: __init__.py  blobkey.py  db.py  incidents.py  packs_repo.py  records.py  snapshot_repo.py  snapshots.py  tables.py
kintsugi/transform/: __init__.py  primitives.py  registry.py
kintsugi/validate/: __init__.py  dynamic_model.py
migrations/: env.py  include.py  script.py.mako
migrations/versions/: 0001_enums.py  0002_site_pack.py  0003_run_snapshot.py  0004_record_gold.py  0005_incident.py  0006_gold_quarantine.py
ops/: README.md
packs/books.toscrape.com/: book.yaml
packs/quotes.toscrape.com/: quote.yaml
packs/scrapethissite.com/: oscar_film.yaml
schema/: site-pack.schema.json
tests/: conftest.py  fixture_server.py  generate_books_corpus.py  generate_quotes_corpus.py
tests/compliance/: test_block_detect.py  test_conditional_requests.py  test_enforcement_table.py  test_no_browser_spoofing.py  test_no_secret_leaks.py  test_pack_compliance_block.py  test_pack_denylist.py  test_ratelimit.py  test_retry_backoff.py  test_robots.py  test_soft_404.py  test_user_agent.py
tests/harness/: test_edge_coverage.py  test_expected_schema.py  test_fixture_manifest.py  test_replay.py
tests/integration/: test_cli.py  test_db_engine.py  test_fixtures_import.py  test_gold_book_cast_safety.py  test_history_median.py  test_incidents.py  test_live_books_source.py  test_metrics_persist.py  test_migrations_roundtrip.py  test_packs_repo.py  test_phase0_dod.py  test_quotes_pack.py  test_run_metrics.py  test_runner.py  test_runner_classify.py  test_scd2_writer.py  test_schema_constraints.py  test_scrapethissite_pack.py  test_snapshot_repo.py
tests/live/: test_books_upc_uniqueness.py
tests/unit/: test_adr013_guard.py  test_adr_guards.py  test_blobkey.py  test_books_pack.py  test_canonical_json.py  test_check_sources.py  test_ci_workflow.py  test_classify_pure.py  test_clock.py  test_compute_profile.py  test_config.py  test_css_extractor.py  test_discovery_registry.py  test_docs_links.py  test_dynamic_validation.py  test_embedded_json.py  test_eol_determinism.py  test_extract_chain.py  test_extract_entities.py  test_fetch_base.py  test_fixture_capture.py  test_fixture_corpus.py  test_http_fetcher.py  test_jsonld_extractor.py  test_lint_gate.py  test_logging.py  test_natural_key.py  test_network_guard.py  test_no_live_in_ci.py  test_outcome_enums.py  test_pack_jsonschema.py  test_pack_loader.py  test_pack_model.py  test_pack_model_extract.py  test_pack_model_schema.py  test_pack_validate.py  test_pagination_discovery.py  test_pandera_frame_checks.py  test_pandera_gen.py  test_precheck_shortcircuit.py  (+8 more)
tests/unit/golden/: payload_hash.json  quality_profile.json  run_metrics.json
tools/: __init__.py  check_sources.py  robots_fixtures.json
workbench/: README.md
(+81 files in other folders)
